--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/cloud.png
-    - images/rain.png
-    - images/fog.png
-    - images/sunny.png
-    - images/thunder.png
+    - images/clear.jpg
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
