--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.4
   intl: ^0.20.2
   shared_preferences: ^2.5.3
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_test:
