--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   skeletonizer: ^1.4.3
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/logo.png"
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +72,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/clear.jpg
-    - images/rain.jpg
+    - assets/images/clear.jpg
+    - assets/images/rain.jpg
     
   #   - images/a_dot_ham.jpeg
 
