--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   flutter_launcher_icons:
   circular_reveal_animation:
   flutter_card_swiper: ^7.0.2
-
+  firebase_core: ^3.13.0 
+  firebase_analytics: ^11.4.5
 flutter_icons:
   android: true
   ios: true
